[package]
name = "aoc-2023-rust"
version = "0.1.0"
authors = ["Thomas HuchedeÌ <huchede.thomas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.12.0", features = [] }
lazy_static = { version = "1.4.0", features = [] }
nom = "7.1.3"
rayon = { version = "1.8.0", features = [] }
regex = "1.10.2"
